tests/fixtures/invalid/int_pow_bytes.py
# Cannot power Int and Bytes
x: int = 1 ** b"hello"
